2004-10-29  Jim Blandy  <jimb@redhat.com>

	* Makefile.am (AM_CFLAGS): Add '-Wall'.
	* Makefile.in: Update.

2004-10-26  Jim Blandy  <jimb@redhat.com>

	Add an architecture object to the Unix server.
	* arch.h: New header file.
	* server.h (struct arch): New forward struct declaration.
	(struct child_process): Add an 'arch' member to the process.
	* thread-db.c: #include arch.h.
	* linux-target.c: #include arch.h.
	(allocate_empty_arch): New function.
	(x86_make_arch): New function.
	(MAKE_ARCH): New #definition.
	(linux_attach): Initialize process's architecture.

	Provide arch-independent framework for breakpoints.
	* server.h (struct arch_bp_table): New forward struct declaration.
	(struct child_process): New member: 'breakpoint_table'.
	* linux-target.c (linux_attach): Initialize process's breakpoint
	table, if the architecture defines a breakpoint table constructor.
	* arch.h (struct arch): Add fields pointing to breakpoint functions.

	Provide a module implementing breakpoints for architectures that
	support a simple software breakpoint model ("patch these bytes
	into the instruction stream").
	* stock-breakpoints.h, stock-breakpoints.c: New files.
	* linux-target.c: If STOCK_BREAKPOINTS is #defined, then #include
	"stock-breakpoints.h".
	* Makefile.am (EXTRA_rda_SOURCES): Add stock-breakpoints.c.
	* Makefile.in: Updated.

	Define x86 breakpoint functions using the stock-breakpoints.c
	model.
	* configure.in: When configuring for an x86 target, include
	stock-breakpoints.o in the mix, and #define STOCK_BREAKPOINTS.
	* configure: Regenerated.
	* config.in (STOCK_BREAKPOINTS): Provide #definition template.
	* linux-target.c (stock_table_to_x86, x86_table_to_stock,
	stock_bp_to_x86, x86_bp_to_stock, x86_make_bp_table, x86_set_bp,
	x86_delete_bp, x86_bp_hit_p): New functions.
	(x86_make_arch): Register the latter four as our breakpoint
	methods.

	Use the libthread_db event interface to communicate with the